# WeTextProcessing.deprecated

./: .gitignore  CPPLINT.cfg  README.md
.github/workflows/: lint.yml
.gitignore/: .gitignore
grammars/common/: util.grm
grammars/inverse_text_normalization/cn/: Makefile  testcase_cn.txt
grammars/inverse_text_normalization/cn/taggers/: date.grm  electronic.grm  float.grm  fraction.grm  fraction_structured.grm  int.grm  measure.grm  percentage.grm  taggers.grm  telephone.grm  time.grm  whitelist.grm  word_structured.grm
grammars/inverse_text_normalization/cn/verbalizers/: fraction_unstructured.grm  verbalizers.grm  word_unstructured.grm
grammars/inverse_text_normalization/en/: Makefile  testcase_en.txt
grammars/inverse_text_normalization/en/data/: whitelist.tsv
grammars/inverse_text_normalization/en/data/currency/: plural.tsv  singular.tsv
grammars/inverse_text_normalization/en/data/fraction/: digit.tsv  special.tsv  teen.tsv  ties.tsv
grammars/inverse_text_normalization/en/data/measurements/: plural.tsv  singular.tsv
grammars/inverse_text_normalization/en/data/ordinals/: teen.tsv  ties.tsv
grammars/inverse_text_normalization/en/data/time/: time_to.tsv  time_zone.tsv
grammars/inverse_text_normalization/en/taggers/: date.grm  electronic.grm  float.grm  fraction.grm  int.grm  measure.grm  money.grm  punctuation.grm  taggers.grm  telephone.grm  time.grm  whitelist.grm  word.grm
grammars/inverse_text_normalization/en/verbalizers/: date.grm  money.grm  others.grm  time.grm  verbalizers.grm
src/: CMakeLists.txt  README.md
src/text_processor/: text_processor.cc  text_processor.h
src/utils/: colors.h  paths.h
